<resources>
    <string name="app_name">SportBettingApp</string>
    <string name="play_label">Играть</string>
    <string name="soccer_label">Футбол</string>
    <string name="tennis_label">Теннис</string>
    <string name="hokey_label">Хоккей</string>
    <string name="box_label">Бокс</string>
    <string name="your_team_label">Твоя\nкоманда</string>
    <string name="vs_text_label">VS</string>
    <string name="select_team_label">Выбрать команду</string>
    <string name="betting_label">Ставка</string>
    <string name="betting_factor_label">Коэффициент 2.0</string>
    <string name="start_game_label">Узнать результат</string>
    <string name="timer_divider_label">:</string>
    <string name="score_label">Счёт</string>
    <string name="get_results_label">Перейти к результатам</string>
    <string name="victory_label">Победа!</string>
    <string name="fail_label">Не повезло</string>
    <string name="try_again_label">Время попробовать еще раз!</string>
    <string name="to_main_menu_label">На главную</string>
    <string name="get_gift_label">Получить подарок</string>
    <string name="results_score">+%d монет</string>
    <string name="gift_loading_error">Не удалось загрузить контент!</string>
</resources>