<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/RootView">

    <include
        android:id="@+id/appTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/resultsImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/result_img"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/appTopBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/successResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/resultsImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/ResultTitle"
            android:text="@string/victory_label"/>

        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:textAppearance="@style/ResultScoreText"
            tools:text="+100 монет"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/failResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/resultsImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/ResultTitle"
            android:text="@string/fail_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/try_again_label"
            android:textAppearance="@style/ResultScoreText" />
    </LinearLayout>

    <Button
        android:id="@+id/getGiftBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        style="@style/StartGameBtn"
        android:backgroundTint="@color/green_accent"
        android:layout_marginHorizontal="16dp"
        android:text="@string/get_gift_label"
        app:layout_constraintBottom_toTopOf="@id/toMainMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/toMainMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        style="@style/StartGameBtn"
        android:layout_marginHorizontal="16dp"
        android:text="@string/to_main_menu_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>