<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/appTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/sportsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/appTopBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/footballButton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:elevation="4dp"
            android:background="@drawable/sport_item_bg"
            android:layout_marginHorizontal="8dp">

            <ImageView
                android:id="@+id/soccerPlayerImg"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/soccer_player_ball"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/playSoccer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/play_label"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_play"
                android:backgroundTint="@color/green_accent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/soccerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soccer_label"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintTop_toBottomOf="@id/playSoccer"
                app:layout_constraintStart_toStartOf="@id/playSoccer"
                app:layout_constraintEnd_toEndOf="@id/playSoccer"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tennisButton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:elevation="4dp"
            android:background="@drawable/sport_item_bg"
            android:layout_marginHorizontal="8dp">

            <ImageView
                android:id="@+id/tennisPlayerImg"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/tennis_player"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/playTennis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/play_label"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_play"
                android:backgroundTint="@color/green_accent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tennisLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tennis_label"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintTop_toBottomOf="@id/playTennis"
                app:layout_constraintStart_toStartOf="@id/playTennis"
                app:layout_constraintEnd_toEndOf="@id/playTennis"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hokeyButton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:elevation="4dp"
            android:background="@drawable/sport_item_bg"
            android:layout_marginHorizontal="8dp">

            <ImageView
                android:id="@+id/hokeyPlayerImg"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/hokey_player"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/playHokey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/play_label"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_play"
                android:backgroundTint="@color/green_accent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/hokeyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hokey_label"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintTop_toBottomOf="@id/playHokey"
                app:layout_constraintStart_toStartOf="@id/playHokey"
                app:layout_constraintEnd_toEndOf="@id/playHokey"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/boxButton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:elevation="4dp"
            android:background="@drawable/sport_item_bg"
            android:layout_marginHorizontal="8dp">

            <ImageView
                android:id="@+id/boxPlayerImg"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/box_player"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/playBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/play_label"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_play"
                android:backgroundTint="@color/green_accent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/boxLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/box_label"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintTop_toBottomOf="@id/playBox"
                app:layout_constraintStart_toStartOf="@id/playBox"
                app:layout_constraintEnd_toEndOf="@id/playBox"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>